--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
   "dependencies": {
     "@s-ui/component-dependencies": "1"
   },
+  "overrides": {
+    "dset": "3.1.4",
+    "micromatch": "4.0.8"
+  },
   "config": {
     "sui-bundler": {
       "type": "typescript",
@@ -87,7 +91,7 @@
   ],
   "eslintConfig": {
     "extends": [
-      "./node_modules/@s-ui/lint/eslintrc.ts.js"
+      "./node_modules/@s-ui/lint/eslintrc.js"
     ]
   },
   "stylelint": {
